# WanderBot

backend/: .gitignore  pyproject.toml  run.py  test_connections.py  wanderbot_checkpoints.db-shm  wanderbot_checkpoints.db-wal
backend/src/: config.py  graph.py  main.py  state.py
backend/src/api/: app.py  models.py  routes.py
backend/src/nodes/: analyze.py  curate.py  draft_plan.py  live_verifier.py  logistics_enricher.py  rag_retriever.py  validate_citations.py  weather_enricher.py
docs/: ExecutionPlan.txt  HOW_IT_WORKS.md  PRD.md  itinerary_chittagong_bangladesh.md
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/chat/: FeedbackPanel.tsx  TripInput.tsx
frontend/src/components/itinerary/: ItineraryMap.tsx  ItineraryView.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/progress/: PipelineProgress.tsx
frontend/src/hooks/: usePlanSession.ts
